fixed crew members grid gap

--- a/HCI-lab/src/components/card/style.module.css
+++ b/HCI-lab/src/components/card/style.module.css
@@ -10,7 +10,7 @@ ul {
     transition: 0.3s;
     border-radius: 35px;
     width: 100%;
-    height: max-content;
+    height: 90%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto max-content;
