--- a/HCI-lab/src/pages/aboutUs.module.css
+++ b/HCI-lab/src/pages/aboutUs.module.css
@@ -22,7 +22,7 @@
   width: 80%;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: max-content 1fr max-content 1fr;
-  gap: 40px 20px;
+  gap: 20px 20px;
   grid-template-areas:
     "positionCrewMember1 positionCrewMember2 positionCrewMember3"
     "crewMember1 crewMember2 crewMember3"
@@ -73,7 +73,7 @@
     margin-top: -45px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: max-content 1fr max-content 1fr max-content 1fr;
-    gap: 50px 20px;
+    gap: 20px 20px;
     grid-template-areas:
       "positionCrewMember1 positionCrewMember2"
       "crewMember1 crewMember2"
@@ -89,7 +89,7 @@
     margin-top: -55px;
     grid-template-columns: 1fr;
     grid-template-rows: max-content 1fr max-content 1fr max-content 1fr max-content 1fr max-content 1fr max-content 1fr;
-    gap: 55px 20px;
+    gap: 20px 20px;
     grid-template-areas:
       "positionCrewMember1"
       "crewMember1"
